k8s_yamls/application/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-svc
  namespace: books-catalog
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    service: books-catalog
  type: ClusterIP
